packages/webassemblyjs/test/fixtures/type-errors/if-different-branches/exec.tjs
it("should throw an error during instantiation when type checking fails", () => {
  assert.throws(
    () => WebAssembly.instantiateFromSource(watmodule),
    "type mismatch in if branches"
  );
});
